# ozhlathi-rs

./: .gitignore  LICENSE
.github/workflows/: rust.yml
ozhlathi-base/: Cargo.toml
ozhlathi-base/src/: lib.rs
ozhlathi-client/: Cargo.toml
ozhlathi-client/src/: main.rs
ozhlathi-web/: Cargo.toml
ozhlathi-web/src/: config.rs  main.rs
