[package]
name = "ozhlathi-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.2.1", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde_json = "1.0.95"
sys-info = "0.9.1"
ozhlathi-base = { path = "../ozhlathi-base" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi"] }
